// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PraisalManager.addComponents should succeed based on vendor assets 1`] = `
Array [
  "Component/Construction",
  Object {
    "health": 18,
    "mass": 8,
    "maxIntegrity": 30,
    "prerequisites": Object {
      "Ingot/Iron": 10,
    },
    "size": Object {
      "X": 0.2,
      "Y": 0.1,
      "Z": 0.1,
    },
    "subtype": "Construction",
    "time": 1.5,
    "type": "Component",
    "volume": 2,
  },
]
`;

exports[`PraisalManager.addComponents should succeed based on vendor assets 2`] = `
Array [
  "Component/Construction",
  "Component/Girder",
  "Component/MetalGrid",
  "Component/InteriorPlate",
  "Component/SteelPlate",
  "Component/SmallTube",
  "Component/LargeTube",
  "Component/Motor",
  "Component/Display",
  "Component/BulletproofGlass",
  "Component/Computer",
  "Component/Reactor",
  "Component/Thrust",
  "Component/GravityGenerator",
  "Component/Medical",
  "Component/RadioCommunication",
  "Component/Detector",
  "Component/Canvas",
  "Component/Explosives",
  "Component/SolarCell",
  "Component/PowerCell",
  "Component/Superconductor",
]
`;

exports[`PraisalManager.addCubes should succeed based on vendor assets 1`] = `
Array [
  "BatteryBlock/LargeBlockBatteryBlock",
  Object {
    "$": Object {
      "xsi:type": "MyObjectBuilder_BatteryBlockDefinition",
    },
    "AdaptibleInput": Array [
      "true",
    ],
    "BlockPairName": Array [
      "BatteryBlock",
    ],
    "BlockTopology": Array [
      "TriangleMesh",
    ],
    "BuildProgressModels": Array [
      Object {
        "Model": Array [
          Object {
            "$": Object {
              "BuildPercentUpperBound": "0.33",
              "File": "Models\\\\Cubes\\\\Large\\\\BatteryLargeConstruction_1.mwm",
            },
          },
          Object {
            "$": Object {
              "BuildPercentUpperBound": "0.66",
              "File": "Models\\\\Cubes\\\\Large\\\\BatteryLargeConstruction_2.mwm",
            },
          },
          Object {
            "$": Object {
              "BuildPercentUpperBound": "1.00",
              "File": "Models\\\\Cubes\\\\Large\\\\BatteryLargeConstruction_3.mwm",
            },
          },
        ],
      },
    ],
    "BuildTimeSeconds": Array [
      45,
    ],
    "Components": Array [
      Object {
        "Component": Array [
          Object {
            "$": Object {
              "Count": "20",
              "Subtype": "SteelPlate",
            },
          },
          Object {
            "$": Object {
              "Count": "10",
              "Subtype": "Construction",
            },
          },
          Object {
            "$": Object {
              "Count": "120",
              "Subtype": "PowerCell",
            },
            "DeconstructId": Array [
              Object {
                "SubtypeId": Array [
                  "Scrap",
                ],
                "TypeId": Array [
                  "Ore",
                ],
              },
            ],
          },
          Object {
            "$": Object {
              "Count": "25",
              "Subtype": "Computer",
            },
          },
          Object {
            "$": Object {
              "Count": "20",
              "Subtype": "Construction",
            },
          },
          Object {
            "$": Object {
              "Count": "60",
              "Subtype": "SteelPlate",
            },
          },
        ],
      },
    ],
    "CriticalComponent": Array [
      Object {
        "$": Object {
          "Index": "0",
          "Subtype": "PowerCell",
        },
      },
    ],
    "CubeSize": Array [
      "Large",
    ],
    "DamageEffectName": Array [
      "Damage_Electrical_Damaged",
    ],
    "DamagedSound": Array [
      "ParticleElectrical",
    ],
    "DestroyEffect": Array [
      "BlockDestroyedExplosion_Large",
    ],
    "DestroySound": Array [
      "WepSmallWarheadExpl",
    ],
    "DisplayName": Array [
      "DisplayName_Block_Battery",
    ],
    "EdgeType": Array [
      "Light",
    ],
    "EmissiveColorPreset": Array [
      "Extended",
    ],
    "Icon": Array [
      "Textures\\\\GUI\\\\Icons\\\\Cubes\\\\Battery.dds",
    ],
    "Id": Array [
      Object {
        "SubtypeId": Array [
          "LargeBlockBatteryBlock",
        ],
        "TypeId": Array [
          "MyObjectBuilder_BatteryBlock",
        ],
      },
    ],
    "InitialStoredPowerRatio": Array [
      "0.3",
    ],
    "InventorySize": Array [
      Object {
        "X": Array [
          "1",
        ],
        "Y": Array [
          "1",
        ],
        "Z": Array [
          "1",
        ],
      },
    ],
    "MaxPowerOutput": Array [
      "12",
    ],
    "MaxStoredPower": Array [
      "3",
    ],
    "Model": Array [
      "Models\\\\Cubes\\\\Large\\\\BatteryLarge.mwm",
    ],
    "ModelOffset": Array [
      Object {
        "$": Object {
          "x": "0",
          "y": "0",
          "z": "0",
        },
      },
    ],
    "PCU": Array [
      15,
    ],
    "Public": Array [
      "true",
    ],
    "RequiredPowerInput": Array [
      "12",
    ],
    "ResourceSinkGroup": Array [
      "BatteryBlock",
    ],
    "ResourceSourceGroup": Array [
      "Battery",
    ],
    "Size": Array [
      Object {
        "$": Object {
          "x": 1,
          "y": 1,
          "z": 1,
        },
      },
    ],
  },
]
`;

exports[`PraisalManager.addCubes should succeed based on vendor assets 2`] = `
Array [
  "CubeBlock/Monolith",
  "CubeBlock/Stereolith",
  "BatteryBlock/LargeBlockBatteryBlock",
  "BatteryBlock/SmallBlockBatteryBlock",
  "CubeBlock/LargeBlockArmorBlock",
  "CubeBlock/LargeBlockArmorSlope",
  "CubeBlock/LargeBlockArmorCorner",
  "CubeBlock/LargeBlockArmorCornerInv",
  "CubeBlock/LargeRoundArmor_Slope",
  "CubeBlock/LargeRoundArmor_Corner",
  "CubeBlock/LargeRoundArmor_CornerInv",
  "CubeBlock/LargeHeavyBlockArmorBlock",
  "CubeBlock/LargeHeavyBlockArmorSlope",
  "CubeBlock/LargeHeavyBlockArmorCorner",
  "CubeBlock/LargeHeavyBlockArmorCornerInv",
  "CubeBlock/SmallBlockArmorBlock",
  "CubeBlock/SmallBlockArmorSlope",
  "CubeBlock/SmallBlockArmorCorner",
  "CubeBlock/SmallBlockArmorCornerInv",
  "CubeBlock/SmallHeavyBlockArmorBlock",
  "CubeBlock/SmallHeavyBlockArmorSlope",
  "CubeBlock/SmallHeavyBlockArmorCorner",
  "CubeBlock/SmallHeavyBlockArmorCornerInv",
  "CubeBlock/LargeHalfArmorBlock",
  "CubeBlock/LargeHeavyHalfArmorBlock",
  "CubeBlock/LargeHalfSlopeArmorBlock",
  "CubeBlock/LargeHeavyHalfSlopeArmorBlock",
  "CubeBlock/HalfArmorBlock",
  "CubeBlock/HeavyHalfArmorBlock",
  "CubeBlock/HalfSlopeArmorBlock",
  "CubeBlock/HeavyHalfSlopeArmorBlock",
  "CubeBlock/LargeBlockArmorRoundSlope",
  "CubeBlock/LargeBlockArmorRoundCorner",
  "CubeBlock/LargeBlockArmorRoundCornerInv",
  "CubeBlock/LargeHeavyBlockArmorRoundSlope",
  "CubeBlock/LargeHeavyBlockArmorRoundCorner",
  "CubeBlock/LargeHeavyBlockArmorRoundCornerInv",
  "CubeBlock/SmallBlockArmorRoundSlope",
  "CubeBlock/SmallBlockArmorRoundCorner",
  "CubeBlock/SmallBlockArmorRoundCornerInv",
  "CubeBlock/SmallHeavyBlockArmorRoundSlope",
  "CubeBlock/SmallHeavyBlockArmorRoundCorner",
  "CubeBlock/SmallHeavyBlockArmorRoundCornerInv",
  "CubeBlock/LargeBlockArmorSlope2Base",
  "CubeBlock/LargeBlockArmorSlope2Tip",
  "CubeBlock/LargeBlockArmorCorner2Base",
  "CubeBlock/LargeBlockArmorCorner2Tip",
  "CubeBlock/LargeBlockArmorInvCorner2Base",
  "CubeBlock/LargeBlockArmorInvCorner2Tip",
  "CubeBlock/LargeHeavyBlockArmorSlope2Base",
  "CubeBlock/LargeHeavyBlockArmorSlope2Tip",
  "CubeBlock/LargeHeavyBlockArmorCorner2Base",
  "CubeBlock/LargeHeavyBlockArmorCorner2Tip",
  "CubeBlock/LargeHeavyBlockArmorInvCorner2Base",
  "CubeBlock/LargeHeavyBlockArmorInvCorner2Tip",
  "CubeBlock/SmallBlockArmorSlope2Base",
  "CubeBlock/SmallBlockArmorSlope2Tip",
  "CubeBlock/SmallBlockArmorCorner2Base",
  "CubeBlock/SmallBlockArmorCorner2Tip",
  "CubeBlock/SmallBlockArmorInvCorner2Base",
  "CubeBlock/SmallBlockArmorInvCorner2Tip",
  "CubeBlock/SmallHeavyBlockArmorSlope2Base",
  "CubeBlock/SmallHeavyBlockArmorSlope2Tip",
  "CubeBlock/SmallHeavyBlockArmorCorner2Base",
  "CubeBlock/SmallHeavyBlockArmorCorner2Tip",
  "CubeBlock/SmallHeavyBlockArmorInvCorner2Base",
  "CubeBlock/SmallHeavyBlockArmorInvCorner2Tip",
  "TerminalBlock/ControlPanel",
  "MyProgrammableBlock/SmallProgrammableBlock",
  "TerminalBlock/SmallControlPanel",
  "LargeGatlingTurret/",
  "LargeGatlingTurret/SmallGatlingTurret",
  "LargeMissileTurret/",
  "LargeMissileTurret/SmallMissileTurret",
  "InteriorTurret/LargeInteriorTurret",
  "Passage/",
  "Door/",
  "RadioAntenna/LargeBlockRadioAntenna",
  "Beacon/LargeBlockBeacon",
  "Beacon/SmallBlockBeacon",
  "ReflectorLight/LargeBlockFrontLight",
  "InteriorLight/SmallLight",
  "InteriorLight/SmallBlockSmallLight",
  "InteriorLight/LargeBlockLight_1corner",
  "InteriorLight/LargeBlockLight_2corner",
  "InteriorLight/SmallBlockLight_1corner",
  "InteriorLight/SmallBlockLight_2corner",
  "CubeBlock/LargeWindowSquare",
  "CubeBlock/LargeWindowEdge",
  "CubeBlock/LargeStairs",
  "CubeBlock/LargeRamp",
  "CubeBlock/LargeSteelCatwalk",
  "CubeBlock/LargeSteelCatwalk2Sides",
  "CubeBlock/LargeSteelCatwalkCorner",
  "CubeBlock/LargeSteelCatwalkPlate",
  "CubeBlock/LargeCoverWall",
  "CubeBlock/LargeCoverWallHalf",
  "Warhead/LargeWarhead",
  "Warhead/SmallWarhead",
  "Decoy/LargeDecoy",
  "Decoy/SmallDecoy",
  "CubeBlock/LargeBlockInteriorWall",
  "CubeBlock/LargeInteriorPillar",
  "LandingGear/LargeBlockLandingGear",
  "MyObjectBuilder_Projector/LargeProjector",
  "MyObjectBuilder_Projector/SmallProjector",
  "Refinery/LargeRefinery",
  "Refinery/Blast Furnace",
  "OxygenGenerator/",
  "Assembler/LargeAssembler",
  "OreDetector/LargeOreDetector",
  "MedicalRoom/LargeMedicalRoom",
  "GravityGenerator/",
  "GravityGeneratorSphere/",
  "JumpDrive/LargeJumpDrive",
  "Cockpit/LargeBlockCockpit",
  "Cockpit/LargeBlockCockpitSeat",
  "Cockpit/SmallBlockCockpit",
  "Cockpit/DBSmallBlockFighterCockpit",
  "Cockpit/CockpitOpen",
  "Cockpit/PassengerSeatLarge",
  "Cockpit/PassengerSeatSmall",
  "CryoChamber/LargeBlockCryoChamber",
  "LandingGear/SmallBlockLandingGear",
  "ReflectorLight/SmallBlockFrontLight",
  "SmallMissileLauncher/",
  "SmallMissileLauncher/LargeMissileLauncher",
  "SmallMissileLauncherReload/SmallRocketLauncherReload",
  "SmallGatlingGun/",
  "Drill/SmallBlockDrill",
  "Drill/LargeBlockDrill",
  "OreDetector/SmallBlockOreDetector",
  "SensorBlock/SmallBlockSensor",
  "SensorBlock/LargeBlockSensor",
  "SoundBlock/SmallBlockSoundBlock",
  "SoundBlock/LargeBlockSoundBlock",
  "TextPanel/SmallTextPanel",
  "TextPanel/SmallLCDPanelWide",
  "TextPanel/SmallLCDPanel",
  "TextPanel/LargeBlockCorner_LCD_1",
  "TextPanel/LargeBlockCorner_LCD_2",
  "TextPanel/LargeBlockCorner_LCD_Flat_1",
  "TextPanel/LargeBlockCorner_LCD_Flat_2",
  "TextPanel/SmallBlockCorner_LCD_1",
  "TextPanel/SmallBlockCorner_LCD_2",
  "TextPanel/SmallBlockCorner_LCD_Flat_1",
  "TextPanel/SmallBlockCorner_LCD_Flat_2",
  "OxygenTank/OxygenTankSmall",
  "OxygenGenerator/OxygenGeneratorSmall",
  "TextPanel/LargeTextPanel",
  "TextPanel/LargeLCDPanel",
  "TextPanel/LargeLCDPanelWide",
  "RadioAntenna/SmallBlockRadioAntenna",
  "RemoteControl/LargeBlockRemoteControl",
  "RemoteControl/SmallBlockRemoteControl",
  "AirVent/",
  "AirVent/SmallAirVent",
  "OxygenTank/",
  "OxygenTank/LargeHydrogenTank",
  "OxygenTank/SmallHydrogenTank",
  "UpgradeModule/LargeProductivityModule",
  "UpgradeModule/LargeEffectivenessModule",
  "UpgradeModule/LargeEnergyModule",
  "CargoContainer/SmallBlockSmallContainer",
  "CargoContainer/SmallBlockMediumContainer",
  "CargoContainer/SmallBlockLargeContainer",
  "CargoContainer/LargeBlockSmallContainer",
  "CargoContainer/LargeBlockLargeContainer",
  "Thrust/SmallBlockSmallThrust",
  "Thrust/SmallBlockLargeThrust",
  "Thrust/LargeBlockSmallThrust",
  "Thrust/LargeBlockLargeThrust",
  "Thrust/LargeBlockLargeHydrogenThrust",
  "Thrust/LargeBlockSmallHydrogenThrust",
  "Thrust/SmallBlockLargeHydrogenThrust",
  "Thrust/SmallBlockSmallHydrogenThrust",
  "Thrust/LargeBlockLargeAtmosphericThrust",
  "Thrust/LargeBlockSmallAtmosphericThrust",
  "Thrust/SmallBlockLargeAtmosphericThrust",
  "Thrust/SmallBlockSmallAtmosphericThrust",
  "CameraBlock/SmallCameraBlock",
  "CameraBlock/LargeCameraBlock",
  "Gyro/LargeBlockGyro",
  "Gyro/SmallBlockGyro",
  "Reactor/SmallBlockSmallGenerator",
  "Reactor/SmallBlockLargeGenerator",
  "Reactor/LargeBlockSmallGenerator",
  "Reactor/LargeBlockLargeGenerator",
  "PistonBase/LargePistonBase",
  "ExtendedPistonBase/LargePistonBase",
  "PistonTop/LargePistonTop",
  "PistonBase/SmallPistonBase",
  "ExtendedPistonBase/SmallPistonBase",
  "PistonTop/SmallPistonTop",
  "MotorStator/LargeStator",
  "MotorSuspension/Suspension3x3",
  "MotorSuspension/Suspension5x5",
  "MotorSuspension/Suspension1x1",
  "MotorSuspension/SmallSuspension3x3",
  "MotorSuspension/SmallSuspension5x5",
  "MotorSuspension/SmallSuspension1x1",
  "MotorSuspension/Suspension3x3mirrored",
  "MotorSuspension/Suspension5x5mirrored",
  "MotorSuspension/Suspension1x1mirrored",
  "MotorSuspension/SmallSuspension3x3mirrored",
  "MotorSuspension/SmallSuspension5x5mirrored",
  "MotorSuspension/SmallSuspension1x1mirrored",
  "MotorRotor/LargeRotor",
  "MotorStator/SmallStator",
  "MotorRotor/SmallRotor",
  "MotorAdvancedStator/LargeAdvancedStator",
  "MotorAdvancedRotor/LargeAdvancedRotor",
  "MotorAdvancedStator/SmallAdvancedStator",
  "MotorAdvancedRotor/SmallAdvancedRotor",
  "ButtonPanel/ButtonPanelLarge",
  "ButtonPanel/ButtonPanelSmall",
  "TimerBlock/TimerBlockLarge",
  "TimerBlock/TimerBlockSmall",
  "CubeBlock/LargeRailStraight",
  "SolarPanel/LargeBlockSolarPanel",
  "SolarPanel/SmallBlockSolarPanel",
  "OxygenFarm/LargeBlockOxygenFarm",
  "CubeBlock/Window1x2Slope",
  "CubeBlock/Window1x2Inv",
  "CubeBlock/Window1x2Face",
  "CubeBlock/Window1x2SideLeft",
  "CubeBlock/Window1x2SideLeftInv",
  "CubeBlock/Window1x2SideRight",
  "CubeBlock/Window1x2SideRightInv",
  "CubeBlock/Window1x1Slope",
  "CubeBlock/Window1x1Face",
  "CubeBlock/Window1x1Side",
  "CubeBlock/Window1x1SideInv",
  "CubeBlock/Window1x1Inv",
  "CubeBlock/Window1x2Flat",
  "CubeBlock/Window1x2FlatInv",
  "CubeBlock/Window1x1Flat",
  "CubeBlock/Window1x1FlatInv",
  "CubeBlock/Window3x3Flat",
  "CubeBlock/Window3x3FlatInv",
  "CubeBlock/Window2x3Flat",
  "CubeBlock/Window2x3FlatInv",
  "Conveyor/SmallBlockConveyor",
  "Conveyor/LargeBlockConveyor",
  "Collector/Collector",
  "Collector/CollectorSmall",
  "ShipConnector/Connector",
  "ShipConnector/ConnectorSmall",
  "ShipConnector/ConnectorMedium",
  "ConveyorConnector/ConveyorTube",
  "ConveyorConnector/ConveyorTubeSmall",
  "ConveyorConnector/ConveyorTubeMedium",
  "ConveyorConnector/ConveyorFrameMedium",
  "ConveyorConnector/ConveyorTubeCurved",
  "ConveyorConnector/ConveyorTubeSmallCurved",
  "ConveyorConnector/ConveyorTubeCurvedMedium",
  "Conveyor/SmallShipConveyorHub",
  "ConveyorSorter/LargeBlockConveyorSorter",
  "ConveyorSorter/MediumBlockConveyorSorter",
  "ConveyorSorter/SmallBlockConveyorSorter",
  "VirtualMass/VirtualMassLarge",
  "VirtualMass/VirtualMassSmall",
  "SpaceBall/SpaceBallLarge",
  "SpaceBall/SpaceBallSmall",
  "Wheel/SmallRealWheel1x1",
  "Wheel/SmallRealWheel",
  "Wheel/SmallRealWheel5x5",
  "Wheel/RealWheel1x1",
  "Wheel/RealWheel",
  "Wheel/RealWheel5x5",
  "Wheel/SmallRealWheel1x1mirrored",
  "Wheel/SmallRealWheelmirrored",
  "Wheel/SmallRealWheel5x5mirrored",
  "Wheel/RealWheel1x1mirrored",
  "Wheel/RealWheelmirrored",
  "Wheel/RealWheel5x5mirrored",
  "Wheel/Wheel1x1",
  "Wheel/SmallWheel1x1",
  "Wheel/Wheel3x3",
  "Wheel/SmallWheel3x3",
  "Wheel/Wheel5x5",
  "Wheel/SmallWheel5x5",
  "ShipGrinder/LargeShipGrinder",
  "ShipGrinder/SmallShipGrinder",
  "ShipWelder/LargeShipWelder",
  "ShipWelder/SmallShipWelder",
  "MergeBlock/LargeShipMergeBlock",
  "MergeBlock/SmallShipMergeBlock",
  "CubeBlock/ArmorAlpha",
  "CubeBlock/ArmorCenter",
  "MyProgrammableBlock/LargeProgrammableBlock",
  "CubeBlock/ArmorCorner",
  "CubeBlock/ArmorInvCorner",
  "CubeBlock/ArmorSide",
  "CubeBlock/SmallArmorCenter",
  "CubeBlock/SmallArmorCorner",
  "CubeBlock/SmallArmorInvCorner",
  "CubeBlock/SmallArmorSide",
  "LaserAntenna/LargeBlockLaserAntenna",
  "LaserAntenna/SmallBlockLaserAntenna",
  "AirtightHangarDoor/",
  "AirtightSlideDoor/LargeBlockSlideDoor",
  "Parachute/LgParachute",
  "Parachute/SmParachute",
  "DebugSphere1/DebugSphereLarge",
  "DebugSphere2/DebugSphereLarge",
  "DebugSphere3/DebugSphereLarge",
]
`;

exports[`PraisalManager.addIngots should succeed based on vendor assets 1`] = `
Array [
  "Ingot/Stone",
  Object {
    "mass": 1,
    "prerequisites": Object {
      "Ore/Stone": 1.1111111111111112,
    },
    "subtype": "Stone",
    "time": 0.1,
    "type": "Ingot",
    "volume": 0.37,
  },
]
`;

exports[`PraisalManager.addIngots should succeed based on vendor assets 2`] = `
Array [
  "Ingot/Stone",
  "Ingot/Iron",
  "Ingot/Nickel",
  "Ingot/Cobalt",
  "Ingot/Magnesium",
  "Ingot/Silicon",
  "Ingot/Silver",
  "Ingot/Gold",
  "Ingot/Platinum",
  "Ingot/Uranium",
]
`;

exports[`PraisalManager.addOres should succeed based on vendor assets 1`] = `
Array [
  "Ore/Stone",
  Object {
    "mass": 1,
    "subtype": "Stone",
    "type": "Ore",
    "volume": 0.37,
  },
]
`;

exports[`PraisalManager.addOres should succeed based on vendor assets 2`] = `
Array [
  "Ore/Stone",
  "Ore/Iron",
  "Ore/Nickel",
  "Ore/Cobalt",
  "Ore/Magnesium",
  "Ore/Silicon",
  "Ore/Silver",
  "Ore/Gold",
  "Ore/Platinum",
  "Ore/Uranium",
  "Ore/Scrap",
  "Ore/Ice",
  "Ore/Organic",
]
`;
